--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,151 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #272822 ;
+
 }
+.main{
+  // padding: 25px;
+  // padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #65FFD4;
+}
+
+.btn {
+  box-sizing: border-box;
+  appearance: none;
+  background-color: black;
+  border: 3px solid transparent;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  align-self: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1;
+  padding: 1.2em 2.8em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: Century Gothic;
+  font-weight: 700;
+  color:#65FFD4;
+  margin: 20px;
+}
+.btn:hover {
+    text-decoration: none;
+    transition: all .8s;
+    font-weight: bolder;
+    border: 3px solid black;
+    color: black;
+    background-color: #65FFD4;
+}
+.btn:active {
+  background-color: lime;
+  border-radius: 15px;
+}
+
+.form {
+  position: fixed;
+  min-width: 400px;
+  min-height: 300px;
+  padding: 50px;
+  border: 2px solid black;
+  border-radius: 15px;
+  background-color: #00FFA9;
+  margin: 30px;
+  opacity: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+  top: 100px;
+}
+
+.modal-window {
+  position: fixed;
+  background-color: black;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0.8;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  z-index: 1;
+}
+
+
+
+.nav {
+  height: 70px;
+  width: 100%;
+  background-color: #272822;
+  padding: 10px;
+  list-style-type: none;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  position: fixed;
+  top: 0;
+}
+
+.link {
+  font-size: 15px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #14D888;
+  margin-left: 15px;
+  text-decoration: none;
+}
+.link:hover{
+  text-decoration: none;
+  transition: all .7s;
+  font-weight: bolder;
+  letter-spacing: 0.3em; 
+}
+
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #14D888;
+  width: 100%;
+  .logo{
+    width: 100px;
+  }
+
+  ul{
+    list-style-type: none;
+  }
+  .header_left{
+    display: flex;
+    align-items: center;
+    width: 30%;
+  }
+  .header_right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    .flex_li{
+      display: flex;
+      align-items: center;
+    }
+    .flex_li_half{
+      width: 50%;
+    }
+  }
+}
+.wrapper{
+  max-width: 1080px;
+  margin: 50px auto;
+}
+
+
 
 
