--- a/src/index.scss
+++ b/src/index.scss
@@ -85,8 +85,6 @@ body {
   z-index: 1;
 }
 
-
-
 .nav {
   height: 70px;
   width: 100%;
@@ -117,11 +115,19 @@ body {
 .header{
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   background-color: #14D888;
   width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
   .logo{
     width: 100px;
+    cursor: pointer;
+  }
+  .icon{
+    width: 30px;
+    cursor: pointer;
   }
 
   ul{
@@ -130,12 +136,26 @@ body {
   .header_left{
     display: flex;
     align-items: center;
-    width: 30%;
+    width: 40%;
+  }
+  .title_header{
+    font-size: 25px;
+  }
+  .m_p_0{
+    margin: 0;
+    padding: 0;
+  }
+
+  .padding_l_10{
+    padding-left: 10px;
+  }
+  .padding_l_20{
+    padding-left: 20px;
   }
   .header_right{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     width: 30%;
     .flex_li{
       display: flex;
