--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #272822 ;
+  background-color: #3AE2CE ;
 
 }
 .main{
@@ -25,6 +25,7 @@ body {
   border: 3px solid transparent;
   border-radius: 10px;
   padding: 5px;
+  margin-top: 25px;
   svg:hover{
     path{
       fill: #14D888;  
@@ -39,7 +40,6 @@ body {
   color: black;
   background-color: transparent;
   cursor: pointer;
-
 }
 
 .btn {
@@ -141,9 +141,22 @@ body {
   background-color: white;
   padding-top: 0;
   padding-right: 30px;
-  width: 30%;
+  width: 20%;
   box-sizing: border-box;
   min-width: 300px;
+  border-radius: 10px;
+  transition: all 0.3s;
+  &:hover{
+    box-shadow: 2px 0px 31px 0px rgba(108,230,114,0.5);
+    transform: translateY(-5px);
+  }
+
+  .button_like{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+
   img{
     width: 100%;
     // min-width: 200px;
@@ -218,6 +231,10 @@ body {
   .padding_l_20{
     padding-left: 20px;
   }
+  .padding_l_40{
+    padding-left: 40px;
+  }
+
   .header_right{
     display: flex;
     align-items: center;
@@ -243,15 +260,34 @@ body {
   h1{
     margin: 0;
   }
+  display: flex;
+  justify-content: space-between;
 }
 
 .fl_beetwen{
   display: flex;
   justify-content: space-between;
 }
+.fl_col{
+  display: flex;
+  flex-direction: column;
+}
 
 .al_items_end{
   align-items: flex-end;
+}
+
+.search_block{
+  border: 2px solid #14D888;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10px 0 10px;
+  border-radius: 10px;
+  input{
+    border:none;
+    outline: none;
+  }
 }
 
 
