--- a/src/index.scss
+++ b/src/index.scss
@@ -322,7 +322,7 @@ body {
   position: absolute;
   height: 100%;
   right: 0;
-  width: 25%;
+  width: 20%;
   background-color: white;
   box-shadow: 2px 0px 31px -10px rgba(120,137,158,1);
   padding: 20px;
@@ -370,10 +370,15 @@ body {
     margin-bottom: 30px;
   }
   .cartItem{
+    .img_wrap{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
     margin-bottom: 20px;
     img{
       // max-width: 150px;
-      width: 50%;
+      width: 70%;
       margin-bottom: 10px;
     }
     p{
