--- a/src/index.scss
+++ b/src/index.scss
@@ -324,7 +324,7 @@ body {
   position: absolute;
   height: 100%;
   right: 0;
-  width: 20%;
+  width: 30%;
   background-color: white;
   box-shadow: 2px 0px 31px -10px rgba(120,137,158,1);
   padding: 20px;
@@ -391,6 +391,16 @@ body {
       font-size: 16px;
     }
     
+  }
+
+  .cartItem:hover{
+    box-shadow: 2px 0px 31px -10px rgba(120,137,158,1);
+    transform: translateY(-5px);
+    transition: all 0.7s;
+    padding: 20px;
+    padding-top: 0;
+    margin: 20px;
+    border-radius: 10px;
   }
 }
 
