--- a/src/index.scss
+++ b/src/index.scss
@@ -396,11 +396,29 @@ body {
   .cartItem:hover{
     box-shadow: 2px 0px 31px -10px rgba(120,137,158,1);
     transform: translateY(-5px);
-    transition: all 0.7s;
+    transition: all 1s;
     padding: 20px;
     padding-top: 0;
     margin: 20px;
     border-radius: 10px;
+  }
+}
+
+.cartEmpty{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  
+  .title{
+    margin-bottom: 20px;
+
+  }
+  img{
+    width: 70%;
   }
 }
 
