--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #3AE2CE ;
+  background-color: white;
 
 }
 
@@ -183,6 +183,7 @@ body {
   background-color: white;
   padding: 20px;
   flex-wrap: wrap;
+  padding-bottom: 70px;
 }
 
 .header{
@@ -424,6 +425,17 @@ body {
   img{
     width: 70%;
   }
+}
+
+.hero{
+  width: 100%;
+  img{
+    width: 100%;
+  }
+}
+
+.slider{
+  color: red;
 }
 
 
